rules to multiply(dot product)

--- a/1_pytorch_fundamentals.ipynb
+++ b/1_pytorch_fundamentals.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNPlsYsydYzuUPtqEI9oHDB",
+      "authorship_tag": "ABX9TyN4VeQAy8tIeKW8Cm5SzcoJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1657,7 +1657,16 @@
         "1. Element-wise multiplication\n",
         "2. Matrix multiplication (dot product)\n",
         "\n",
-        "More information on multiplying matrices - https://www.mathsisfun.com/algebra/matrix-multiplying.html"
+        "More information on multiplying matrices - https://www.mathsisfun.com/algebra/matrix-multiplying.html\n",
+        "\n",
+        "There are two main rules that performing matrix multiplication needs to satisfy:\n",
+        "1. The **inner dimensions** must match:\n",
+        "* `(3,2) @ (3,2)` wont work\n",
+        "* `(2,3) @ (3,2)` will work\n",
+        "* `(3,2) @ (2,3)` will work\n",
+        "2. The resulting matrix has the shape of the **outer dimensions**:\n",
+        "* `(2,3) @ (3,2)` -> `(2,2)`\n",
+        "* `(3,2) @ (2,3)` -> `(3,3)`"
       ],
       "metadata": {
         "id": "YlQVGz3rYSTE"
@@ -1711,6 +1720,32 @@
           },
           "metadata": {},
           "execution_count": 57
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor @ tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ds_HcClfyv6P",
+        "outputId": "eb1d87ba-4f55-4b73-ddf2-d1a229231d9e"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(14)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 60
         }
       ]
     },
@@ -1779,10 +1814,86 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### One of the most common errors in deep learning: shape errors"
+      ],
+      "metadata": {
+        "id": "WAwylWghxPZR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# this wont run due to error\n",
+        "# torch.matmul(torch.rand(3,2),torch.rand(3,2))"
+      ],
+      "metadata": {
+        "id": "_RbFlmsayFs9"
+      },
+      "execution_count": 64,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.matmul(torch.rand(2,3),torch.rand(3,2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lT13IQkFzIq9",
+        "outputId": "b6164efa-afd8-4b6e-b640-6183d48cdc18"
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.5592, 1.0845],\n",
+              "        [0.2686, 0.5524]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 62
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.matmul(torch.rand(3,2),torch.rand(2,3))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VW5IdMIJzNsZ",
+        "outputId": "31465fb6-0651-4d58-a2b6-4adb1cbf33a4"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.4756, 0.5532, 0.5232],\n",
+              "        [0.5942, 0.9021, 0.6843],\n",
+              "        [0.6198, 0.9235, 0.7112]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 63
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "WAwylWghxPZR"
+        "id": "taoRSzxSzPzK"
       },
       "execution_count": null,
       "outputs": []
