--- a/1_pytorch_fundamentals.ipynb
+++ b/1_pytorch_fundamentals.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMEYLFjZqwCtMoA5vzbTFma",
+      "authorship_tag": "ABX9TyPfGr1QxkDde7V0zTwNN8eg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2032,10 +2032,151 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Finding the min,max,mean,sum,etc(tensor aggregation)"
+      ],
+      "metadata": {
+        "id": "Bl0N9xMVDqpm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = torch.arange(0, 100, 10)\n",
+        "x, x.dtype"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Cc4M_iU0EGfB",
+        "outputId": "622cd04f-8f50-419c-bb2d-3100b5ba8b68"
+      },
+      "execution_count": 144,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([ 0, 10, 20, 30, 40, 50, 60, 70, 80, 90]), torch.int64)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 144
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.min(x), x.min()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UQdzFTG8ENNO",
+        "outputId": "25295d39-3903-4dca-f057-db67883f635d"
+      },
+      "execution_count": 142,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor(0), tensor(0))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 142
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.max(x), x.max()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qq6-bPlAEZ8T",
+        "outputId": "d8262d32-fa31-4d65-c33e-4803e2d8f4bc"
+      },
+      "execution_count": 143,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor(90), tensor(90))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 143
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# note: the torch.mean() function requires a tensor of float32 datatype to work\n",
+        "torch.mean(x.type(torch.float32)), x.type(torch.float32).mean()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nmEV1oR2Efad",
+        "outputId": "98d2b93b-c011-46d0-ca75-641081d5c0c3"
+      },
+      "execution_count": 145,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor(45.), tensor(45.))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 145
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.sum(x), x.sum()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S3EozWUfFT_K",
+        "outputId": "4101c089-b04d-4198-d13a-3c96411c9474"
+      },
+      "execution_count": 146,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor(450), tensor(450))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 146
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Bl0N9xMVDqpm"
+        "id": "IL8eut94FtV-"
       },
       "execution_count": null,
       "outputs": []
