argmin() and argmax()

--- a/1_pytorch_fundamentals.ipynb
+++ b/1_pytorch_fundamentals.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPfGr1QxkDde7V0zTwNN8eg",
+      "authorship_tag": "ABX9TyMPcm6eTbqqt9IFWcHNu4sP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2043,7 +2043,7 @@
     {
       "cell_type": "code",
       "source": [
-        "x = torch.arange(0, 100, 10)\n",
+        "x = torch.arange(1, 100, 10)\n",
         "x, x.dtype"
       ],
       "metadata": {
@@ -2173,10 +2173,149 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Finding the positional min and max"
+      ],
+      "metadata": {
+        "id": "IL8eut94FtV-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sa4Xr6pUGuQT",
+        "outputId": "32040b33-03d9-4b49-c867-01062046d7f7"
+      },
+      "execution_count": 147,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([ 0, 10, 20, 30, 40, 50, 60, 70, 80, 90])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 147
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.argmin() # returns index position of target tensor where the minimum value occurs"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f76hFkdcGu73",
+        "outputId": "90e23ea4-c0d9-47f7-b98a-5098cd91629b"
+      },
+      "execution_count": 148,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(0)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 148
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VAopPrG-HOJX",
+        "outputId": "6bac145d-5124-482d-c60c-b3921192f5a4"
+      },
+      "execution_count": 151,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(0)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 151
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.argmax() # returns index position of target tensor where the maximum value occurs"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Bfq2XBemHE5f",
+        "outputId": "ee3085e9-9634-4150-fa63-a162bd2a79e9"
+      },
+      "execution_count": 150,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(9)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 150
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x[9]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mbVvfaUOHGuf",
+        "outputId": "4ca3ba19-91a2-446a-a9bf-d7346d73d848"
+      },
+      "execution_count": 152,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(90)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 152
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "IL8eut94FtV-"
+        "id": "oh2Lu8wrHQkM"
       },
       "execution_count": null,
       "outputs": []
