PyTorch and NumPy

--- a/1_pytorch_fundamentals.ipynb
+++ b/1_pytorch_fundamentals.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO+rQxcpEjefwEE2mV0GSfO",
+      "authorship_tag": "ABX9TyPEKb26vH7OQsovDcnSVHO1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2847,10 +2847,221 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### PyTorch tensors & Numpy\n",
+        "\n",
+        "Numpy is a popular scientific Python numerical computing library.\n",
+        "PyTorch has functionality to interact with it.\n",
+        "\n",
+        "* Data in Numpy, want in PyTorch tensor -> `torch.from_numpy(ndarray)`\n",
+        "* PyTorch tensor -> Numpy -> `torch.Tensor.numpy()`"
+      ],
+      "metadata": {
+        "id": "Qta1iJOqKKZ6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "import numpy as np\n",
+        "\n",
+        "array = np.arange(1.0, 8.0)\n",
+        "tensor = torch.from_numpy(array).type(torch.float32) # warning: when converting from numpy -> pytorch, pytorch reflects numpy's default datatype of float64 unless specified otherwise\n",
+        "array, tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Q9AAryexLWI5",
+        "outputId": "040777b8-89d6-4925-dd16-a92712a5ff9f"
+      },
+      "execution_count": 110,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([1., 2., 3., 4., 5., 6., 7.]), tensor([1., 2., 3., 4., 5., 6., 7.]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 110
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "array.dtype, tensor.dtype"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NC0VYnK-K81f",
+        "outputId": "8d91bdec-9d51-4c76-8e8d-a2ce1eb47f47"
+      },
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(dtype('float64'), torch.float64)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 107
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.arange(1.0, 8.0).dtype"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OJvMN56CLH_r",
+        "outputId": "11373579-4acc-4524-fd33-7a2ebe8cee39"
+      },
+      "execution_count": 109,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.float32"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 109
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Change the value of array, what will this do to 'tensor'? (basically does it act like view)\n",
+        "array = array + 1\n",
+        "array, tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eC6dYUsWLMMt",
+        "outputId": "32469e11-d931-4980-e13f-39273e0155ad"
+      },
+      "execution_count": 111,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([2., 3., 4., 5., 6., 7., 8.]), tensor([1., 2., 3., 4., 5., 6., 7.]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 111
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Tensor to Numpy array\n",
+        "tensor = torch.ones(7)\n",
+        "numpy_tensor = tensor.numpy()\n",
+        "tensor, numpy_tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VY9a2RQUMFbx",
+        "outputId": "d06182e4-6b2e-4779-f0e6-c0003f55f087"
+      },
+      "execution_count": 113,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([1., 1., 1., 1., 1., 1., 1.]),\n",
+              " array([1., 1., 1., 1., 1., 1., 1.], dtype=float32))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 113
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numpy_tensor.dtype"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0d_SvM70MGe9",
+        "outputId": "ec93c3cc-eb0c-4073-9518-166fea19fc44"
+      },
+      "execution_count": 114,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dtype('float32')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 114
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Change the tensor, what happens to 'numpy_tensor'?\n",
+        "tensor = tensor + 1\n",
+        "tensor, numpy_tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BDZoziI8MWjD",
+        "outputId": "e64056f9-9c4f-46da-db08-46cca1387679"
+      },
+      "execution_count": 115,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([2., 2., 2., 2., 2., 2., 2.]),\n",
+              " array([1., 1., 1., 1., 1., 1., 1.], dtype=float32))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 115
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "KQYCs0VtJ2Di"
+        "id": "D-NXGU6GM4Wk"
       },
       "execution_count": null,
       "outputs": []
