First PyTorch Model

--- a/2_pytorch_workflow.ipynb
+++ b/2_pytorch_workflow.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM9YVzT0qtGI/vP/FrAe0fH",
+      "authorship_tag": "ABX9TyOdLcEFadGTpQ6RUaoTMCSf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,7 +61,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KmlBT6Okm8gT",
-        "outputId": "45b3b16a-5cf8-49d7-ed04-c06b6e857d0c"
+        "outputId": "a3cf2aa2-5182-4dc3-fb8e-9f4250c3c1be"
       },
       "execution_count": 1,
       "outputs": [
@@ -97,7 +97,7 @@
           "height": 35
         },
         "id": "TE2QaW6xm9eg",
-        "outputId": "4114d581-8d4f-4b4a-cd46-2844ede87b73"
+        "outputId": "784171b3-e5aa-4dcf-bcb8-5f4d1c617634"
       },
       "execution_count": 2,
       "outputs": [
@@ -162,7 +162,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c14e4154-bcb5-458c-e724-dde546c717f9"
+        "outputId": "d8c23a72-a899-40be-f882-fd4e4060d3d5"
       },
       "execution_count": 3,
       "outputs": [
@@ -207,7 +207,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ALok5cnpZ4ts",
-        "outputId": "5d43a8f1-694a-466c-dcc2-51bef7f8e7a6"
+        "outputId": "e71954e1-1643-4f3e-86a1-6646e3d5ad68"
       },
       "execution_count": 4,
       "outputs": [
@@ -247,7 +247,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l6hV6FZaa4lW",
-        "outputId": "a2dd11f0-6d2a-42a8-b683-e81e4130590e"
+        "outputId": "45736683-88fa-46d0-c3c2-52156a931a1b"
       },
       "execution_count": 5,
       "outputs": [
@@ -286,7 +286,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uymbGaEpdvEZ",
-        "outputId": "be131529-4733-4f5c-a3e0-812f731400a5"
+        "outputId": "7471b130-15f5-4644-b56f-539b8f428ad6"
       },
       "execution_count": 6,
       "outputs": [
@@ -403,7 +403,7 @@
       "metadata": {
         "id": "crrgIlrwewbH"
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -417,9 +417,9 @@
           "height": 599
         },
         "id": "34iCrNsRfdFy",
-        "outputId": "7d73f4ad-01e0-4e09-afff-e90cd80eea58"
+        "outputId": "06a78aa5-ba3d-481f-ed92-97096693ac79"
       },
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -434,12 +434,58 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 2. Build model\n",
+        "\n",
+        "Our first PyTorch model!\n",
+        "\n",
+        "Because we're going to be building classes throught the course, I'd recommend getting familiar with OOP in Python, to do so you can use the following resource from Real Python: https://realpython.com/python3-object-oriented-programming/\n",
+        "\n",
+        "What our model does:\n",
+        "* Start with random values (weights & bias)\n",
+        "* Look at training data and adjust the random values to better represent (or get closer to) the ideal values (the weight & bias values we used to create the data)\n",
+        "\n",
+        "How does it do so?\n",
+        "\n",
+        "Through two main algorithms:\n",
+        "1. Gradient descent - https://youtu.be/IHZwWFHWa-w?si=tbSD1Z82aykI9xgn\n",
+        "2. Backpropagation - https://youtu.be/Ilg3gGewQ5U?si=0FQ8xK7QWD8pIjWW"
+      ],
+      "metadata": {
+        "id": "9xsLya0KLJHa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class LinearRegressionModel(nn.Module): # <- almost everything in PyTorch inherits from nn.Module\n",
+        "    def __init__(self):\n",
+        "        super().__init__()\n",
+        "        self.weights = nn.Parameter(torch.randn(1,\n",
+        "                                                requires_grad=True,\n",
+        "                                                dtype=torch.float))\n",
+        "        self.bias = nn.Parameter(torch.randn(1,\n",
+        "                                             requires_grad=True,\n",
+        "                                             dtype=torch.float))\n",
+        "\n",
+        "        # Forward method to define the computation in the model\n",
+        "        def forward(self, x: torch.Tensor) -> torch.Tensor: # <- \"x\" is the input data\n",
+        "            return self.weights * x + self.bias # this is the linear regression formula"
+      ],
+      "metadata": {
+        "id": "4P7r54eHMc6d"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "9xsLya0KLJHa"
+        "id": "UUsk4CqW5JeV"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     }
   ]
