Internals of our model

--- a/2_pytorch_workflow.ipynb
+++ b/2_pytorch_workflow.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOdLcEFadGTpQ6RUaoTMCSf",
+      "authorship_tag": "ABX9TyODTJAX42rOGg1k3hGlcxKa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,7 +61,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KmlBT6Okm8gT",
-        "outputId": "a3cf2aa2-5182-4dc3-fb8e-9f4250c3c1be"
+        "outputId": "47ac7779-7c75-4e36-db35-22dc02700eb2"
       },
       "execution_count": 1,
       "outputs": [
@@ -97,7 +97,7 @@
           "height": 35
         },
         "id": "TE2QaW6xm9eg",
-        "outputId": "784171b3-e5aa-4dcf-bcb8-5f4d1c617634"
+        "outputId": "8159751b-4e68-413a-95cc-cac069eff181"
       },
       "execution_count": 2,
       "outputs": [
@@ -162,7 +162,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d8c23a72-a899-40be-f882-fd4e4060d3d5"
+        "outputId": "421a689d-85e3-497d-9850-c6907a5f9133"
       },
       "execution_count": 3,
       "outputs": [
@@ -207,7 +207,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ALok5cnpZ4ts",
-        "outputId": "e71954e1-1643-4f3e-86a1-6646e3d5ad68"
+        "outputId": "3229c0bc-9653-40f4-9da7-945f228c4862"
       },
       "execution_count": 4,
       "outputs": [
@@ -247,7 +247,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l6hV6FZaa4lW",
-        "outputId": "45736683-88fa-46d0-c3c2-52156a931a1b"
+        "outputId": "19834046-b14b-40a8-9d24-725c0b9d78f3"
       },
       "execution_count": 5,
       "outputs": [
@@ -286,7 +286,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uymbGaEpdvEZ",
-        "outputId": "7471b130-15f5-4644-b56f-539b8f428ad6"
+        "outputId": "43cc1eca-5b47-4b83-a535-aa130c1573be"
       },
       "execution_count": 6,
       "outputs": [
@@ -417,7 +417,7 @@
           "height": 599
         },
         "id": "34iCrNsRfdFy",
-        "outputId": "06a78aa5-ba3d-481f-ed92-97096693ac79"
+        "outputId": "9b124ca0-350c-4257-ed33-676105559083"
       },
       "execution_count": 8,
       "outputs": [
@@ -480,12 +480,128 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### PyTorch model building essentials\n",
+        "\n",
+        "* torch.nn - contains all of the building blocks for computational graphs (a neural network can be considered a computational graph)\n",
+        "* torch.nn.Parameter - what parameters should our model try and learn, often a PyTorch layer from torch.nn will set these for us\n",
+        "* torch.nn.Module - The base class for all neural network modules, if you subclass it, you should overwrite forward()\n",
+        "* torch.optim - this where the optimizers in PyTorch live, they will help with gradient descent\n",
+        "* def forward() - All nn.Module subclasses require you to overwrite forward(), this method defines what happens in the forward computation\n",
+        "\n",
+        "PyTorch essenetial modules cheatsheet - https://pytorch.org/tutorials/beginner/ptcheat.html"
+      ],
+      "metadata": {
+        "id": "UUsk4CqW5JeV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Checking the contents of our PyTorch model\n",
+        "\n",
+        "Now we've created our model, let's check the contents\n",
+        "\n",
+        "So we can check our model parameters or what's inside our model using `.parameters()` and `.state_dict()`"
+      ],
+      "metadata": {
+        "id": "RlT73MFi6U7M"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(42)\n",
+        "\n",
+        "model_0 = LinearRegressionModel()\n",
+        "\n",
+        "list(model_0.parameters())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lPAsqQON-gnM",
+        "outputId": "0ff973cd-184f-4e4d-8190-ccea270aa9b7"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[Parameter containing:\n",
+              " tensor([0.3367], requires_grad=True),\n",
+              " Parameter containing:\n",
+              " tensor([0.1288], requires_grad=True)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# List named parameters\n",
+        "model_0.state_dict()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WsRgGJed-zFO",
+        "outputId": "223b16f5-2282-4901-dea6-c104e9314b8f"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "OrderedDict([('weights', tensor([0.3367])), ('bias', tensor([0.1288]))])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "weight, bias"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "olzBJg-6_mCw",
+        "outputId": "64f31f8f-3ec8-492a-972e-cf1ad4d61f3f"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(0.7, 0.3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "UUsk4CqW5JeV"
+        "id": "a2SwZCOL_wZ6"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     }
   ]
