--- a/2_pytorch_workflow.ipynb
+++ b/2_pytorch_workflow.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOoytEDhPWC8FJP5mj1uEii",
+      "authorship_tag": "ABX9TyNdbwv2n4FgTTs4E8SrXYOO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -804,12 +804,110 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 3. Train model\n",
+        "\n",
+        "The whole idea of training is for a model to move from some *unknown* parameters (these may be random) to some *known* parameters.\n",
+        "\n",
+        "Or in other words from a poor representation of the data to a better representation of the data.\n",
+        "\n",
+        "One way to measure how poor or how wrong your models predictions are is to use a loss function.\n",
+        "\n",
+        "* Note: Loss function may also be called cost function or criterion in different areas. For our case, we're going to refer to it as a loss function.\n",
+        "\n",
+        "Things we need to train:\n",
+        "\n",
+        "* **Loss function:** A function to measure how wrong your model's predictions are to the ideal outputs, lower is better.\n",
+        "* **Optimizer:** Takes into account the loss of a model and adjusts the model's parameters (e.g. weight & bias in our case) to improve the loss function - https://pytorch.org/docs/stable/optim.html\n",
+        "\n",
+        "And specifically for PyTorch, we need:\n",
+        "* A training loop\n",
+        "* A testing loop"
+      ],
+      "metadata": {
+        "id": "97BCYSxmCzZS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list(model_0.parameters())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mTPhM1v9TQ0T",
+        "outputId": "a9fd100a-02d4-4bce-cd51-0f6b0aa3451d"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[Parameter containing:\n",
+              " tensor([0.3367], requires_grad=True),\n",
+              " Parameter containing:\n",
+              " tensor([0.1288], requires_grad=True)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Check out our model's parameters (a parameter is a value that the model sets itself)\n",
+        "model_0.state_dict()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "efRUsfftUo0x",
+        "outputId": "d4349495-4145-49e1-c21b-a8db364abf38"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "OrderedDict([('weights', tensor([0.3367])), ('bias', tensor([0.1288]))])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Setup a Loss function\n",
+        "loss_fn = nn.L1Loss()\n",
+        "\n",
+        "# Setup an optimizer (Stochastic Gradient Descent)\n",
+        "optimizer = torch.optim.SGD(params=model_0.parameters(),\n",
+        "                            lr=0.01) # lr = learning rate = possibly the most important hyperparameter you can set"
+      ],
+      "metadata": {
+        "id": "qYsY_yJPUsRo"
+      },
+      "execution_count": 51,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "97BCYSxmCzZS"
+        "id": "ILo95okikKJU"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     }
   ]
